--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Boilerplate",
-  "name": "Boilerplate - React/Node/Sass/Heroku",
+  "short_name": "Nattskiftet",
+  "name": "Nattskiftet",
   "icons": [
     {
       "src": "favicon.ico",
