--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate",
+  "name": "nattskiftet",
   "version": "1.0.0",
   "engines": {
     "node": "10.16.3"
@@ -15,15 +15,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/osaisacson/boilerplate-react-node-sass.git"
+    "url": "git+https://github.com/osaisacson/nattskiftet.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/osaisacson/boilerplate-react-node-sass/issues"
+    "url": "https://github.com/osaisacson/nattskiftet/issues"
   },
-  "homepage": "https://github.com/osaisacson/boilerplate-react-node-sass#readme",
+  "homepage": "https://github.com/osaisacson/nattskiftet#readme",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
