fix @types not declared

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-insta-stories": "^1.5.2",
     "react-move": "^6.0.0",
     "react-scripts": "3.1.1",
+    "react-skrollr": "^1.0.4",
     "react-twitter-embed": "^3.0.3",
     "reactstrap": "^8.0.1",
     "save-dev": "^2.0.0"
