--- a/package.json
+++ b/package.json
@@ -28,11 +28,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@tinymce/tinymce-react": "^3.3.2",
     "axios": "^0.19.0",
     "concurrently": "^4.1.2",
     "cors": "^2.8.5",
-    "countup": "^1.8.2",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.1",
     "express": "^4.17.1",
@@ -42,14 +40,10 @@
     "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
-    "react-countup": "^4.2.2",
     "react-dom": "^16.9.0",
-    "react-insta-stories": "^1.5.2",
-    "react-move": "^6.0.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "react-skrollr": "^1.0.4",
-    "react-twitter-embed": "^3.0.3",
-    "reactstrap": "^8.0.1",
-    "save-dev": "^2.0.0"
+    "reactstrap": "^8.0.1"
   }
 }
